--- a/Readme
+++ b/Readme
@@ -3,3 +3,4 @@ Name is Bob
 Located near Winnipeg, Manitoba, Canada.
 Interests are Amateur radio, electronics, Arduino, Mechanics, Welding, Fabrication, Machining etc.
 Semi Retired
+Have worked in mining and construction most of my career but did work as auto mech for 4 years in the 90s.
